调整目录结构，将原静态页面的样式拷贝至本项目

--- a/projects/sfx-client/src/index.scss
+++ b/projects/sfx-client/src/index.scss
@@ -2,3 +2,10 @@
 @import "src/styles/navtop";
 @import "src/styles/controls";
 @import "src/styles/pages";
+
+@font-face {
+  font-family: 'Cookie';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Cookie-Regular.ttf');
+}
