--- a/projects/sfx-server/main/web/templates/res/css.gohtml
+++ b/projects/sfx-server/main/web/templates/res/css.gohtml
@@ -1,3 +1,3 @@
 {{ define "res/css.gohtml" }}
-    <link rel='stylesheet' type='text/css' href='{{ resLink "/src/index.scss" "/index.css" }}' />
+    <link rel='stylesheet' type='text/css' href='{{ resLink "/assets/index.css" "/assets/index.css" }}' />
 {{ end }}
