--- a/projects/sfx-server/main/web/templates/res/js.gohtml
+++ b/projects/sfx-server/main/web/templates/res/js.gohtml
@@ -1,3 +1,3 @@
 {{ define "res/js.gohtml" }}
-    <script type='module' crossorigin src='{{ resLink "/src/index.tsx" "/index.js" }}'></script>
+    <script type='module' crossorigin src='{{ resLink "/assets/index.js" "/assets/index.js" }}'></script>
 {{ end }}
