--- a/projects/sfx-client/web/src/index.scss
+++ b/projects/sfx-client/web/src/index.scss
@@ -7,5 +7,5 @@
   font-family: 'Cookie';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/Cookie-Regular.ttf');
+  src: url('../../fonts/Cookie-Regular.ttf');
 }
